--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,26 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: 'Rubik', 'Arial', sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: #fff;
+  color: #4A4B4C;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+
+/* CONTAINER  */
+
+.container {
+  width: 100%;
+  max-width: 1240px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
