--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,30 @@ img {
   height: auto;
 }
 
+/* BUTTON */
+
+.button {
+  display: inline-block;
+  padding: 13px 20px;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: normal;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+}
+
+.button-primary {
+  background: #7296EC;
+  color: #fff;
+}
+.button-primary:hover {
+  opacity: 0.8;
+}
+.button-primary:active {
+  opacity: 0.6;
+}
 
 /* CONTAINER  */
 
@@ -37,4 +61,75 @@ img {
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* SITE-HEADER */
+
+.site-header {
+}
+.site-header-top {
+  background: #F6F6F6;
+  padding: 30px 0;
+}
+.site-header-top-container {
+  display: flex;
+  align-items: center;
+}
+.site-header-logo {
+  background-color: #fff;
+  display: flex;
+  padding: 8px 6px;
+  border-radius: 7px;
+  margin-right: 35px;
+}
+
+.site-header-logo:hover {
+  opacity: 0.8;
+}
+.site-header-logo:active {
+  opacity: 0.6;
+}
+
+/* CURRENCT RATES */
+
+.currency-rates {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-right: auto;
+}
+.currency-rates-item:not(:last-child) {
+  margin-right: 25px;
+}
+.currency-rates-type {
+  color: #2959ce;
+}
+
+/* LANG TOGGLE */
+.lang-toggle {
+  display: flex;
+  padding: 3px;
+  border-radius: 39px;
+  background-color: #dce6ff;
+  margin-right: 25px;
+}
+.lang-toggle-link {
+  font-size: 13px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-decoration: none;
+  text-align: center;
+  color: #a6a6a6;
+  border-radius: 50%;
+}
+.lang-toggle-link-active {
+  background-color: #fff;
+  color: #000;
+}
+.button {
+}
+.button-primary {
 }
