--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,12 @@ img {
   height: auto;
 }
 
+/* OUTLINE STYLES */
+*:focus {
+  outline: 2px dashed #7296EC;
+  outline-offset: 2px;
+}
+
 /* BUTTON */
 
 .button {
@@ -45,9 +51,11 @@ img {
   background: #7296EC;
   color: #fff;
 }
+
 .button-primary:hover {
   opacity: 0.8;
 }
+
 .button-primary:active {
   opacity: 0.6;
 }
@@ -65,16 +73,18 @@ img {
 
 /* SITE-HEADER */
 
-.site-header {
-}
+.site-header {}
+
 .site-header-top {
   background: #F6F6F6;
   padding: 30px 0;
 }
+
 .site-header-top-container {
   display: flex;
   align-items: center;
 }
+
 .site-header-logo {
   background-color: #fff;
   display: flex;
@@ -86,6 +96,7 @@ img {
 .site-header-logo:hover {
   opacity: 0.8;
 }
+
 .site-header-logo:active {
   opacity: 0.6;
 }
@@ -100,11 +111,31 @@ img {
   list-style: none;
   margin-right: auto;
 }
+
 .currency-rates-item:not(:last-child) {
   margin-right: 25px;
 }
+
 .currency-rates-type {
   color: #2959ce;
+}
+
+
+/* GLOBAL SEARCH FORM */
+.global-search-form {
+  margin-right: 25px;
+}
+
+.global-search-form-input {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  padding-top: 15px;
+  padding-bottom: 13px;
+  padding-left: 41px;
+  padding-right: 20px;
+  border-radius: 60px;
+  border: 0;
 }
 
 /* LANG TOGGLE */
@@ -115,6 +146,7 @@ img {
   background-color: #dce6ff;
   margin-right: 25px;
 }
+
 .lang-toggle-link {
   font-size: 13px;
   width: 30px;
@@ -125,11 +157,8 @@ img {
   color: #a6a6a6;
   border-radius: 50%;
 }
+
 .lang-toggle-link-active {
   background-color: #fff;
   color: #000;
-}
-.button {
-}
-.button-primary {
 }
