--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ img {
 /* BUTTON */
 
 .button {
+  border: 0;
   display: inline-block;
   padding: 13px 20px;
   border-radius: 10px;
@@ -51,12 +52,16 @@ img {
   background: #7296EC;
   color: #fff;
 }
+.button-orange {
+  background: #F78B3B;
+  color: #fff;
+}
 
-.button-primary:hover {
+.button:hover {
   opacity: 0.8;
 }
 
-.button-primary:active {
+.button:active {
   opacity: 0.6;
 }
 
@@ -308,4 +313,21 @@ img {
 
 }
 
-.article-card-source {}
+/* Notification CTA */
+
+.notification-cta {
+  margin: 60px 75px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #FFD5B6;
+  padding: 24px 71px 24px 29px;
+  border-radius: 10px;
+}
+
+.notification-cta-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  color: #000000;
+}
