--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,16 @@ img {
   cursor: pointer;
 }
 
+.button-block {
+  display: block;
+  width: 100%;
+}
+
 .button-primary {
   background: #7296EC;
   color: #fff;
 }
+
 .button-orange {
   background: #F78B3B;
   color: #fff;
@@ -330,4 +336,106 @@ img {
   font-size: 20px;
   line-height: 26px;
   color: #000000;
+}
+
+
+/* GLOBAL NEWS */
+
+.global-news {
+  width: 797px;
+}
+
+.global-news-heading {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.news-list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.news-list-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+/* ARTICLE CARD HORIZONTAL */
+
+.article-card-horizontal {
+  display: flex;
+  align-items: flex-start;
+  background: #f6f6f6;
+  border-radius: 15px;
+  padding: 20px 20px 22px 17px;
+}
+
+.article-card-horizontal-image {
+  width: 210px;
+  height: 165px;
+  margin-right: 15px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.article-card-horizontal-content {
+  flex-grow: 1;
+}
+
+.article-card-horizontal-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+}
+
+.article-card-horizontal-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #000;
+}
+
+.article-card-horizontal-link:hover {
+  color: #7296EC;
+}
+
+.article-card-horizontal-link:active {
+  opacity: 0.8;
+}
+
+
+.article-card-horizontal-text {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+.article-card-horizontal-footer {
+  display: flex;
+  align-items: center;
+}
+
+.article-card-horizontal-source-icon {
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.article-card-horizontal-source-time {
+  font-size: 12px;
+  line-height: 14px;
+  color: #5E5F61;
+}
+
+.news-list-more-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 17px;
 }
