--- a/css/styles.css
+++ b/css/styles.css
@@ -453,6 +453,7 @@ img {
 .layout-2-1-sidebar {
   width: 393px;
 }
+
 /* SIDEBAR NEWS CARD */
 
 .sidebar-news-card {
@@ -528,12 +529,137 @@ img {
 .layout-2-1-sidebar-item:not(:last-child) {
   margin-bottom: 10px;
 }
+
 .sidebar-ad-link {
   display: flex;
 }
+
 .sidebar-ad-img {
   border-radius: 15px;
   object-fit: cover;
   width: 393px;
   height: 338px;
+}
+
+
+
+/* SITE FOOTER */
+
+.site-footer {
+  background-color: #7297ef;
+  padding: 40px 0;
+  color: #fff;
+}
+
+
+.site-footer-logo-wrapper {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.site-footer-logo {
+  display: flex;
+}
+
+.site-footer-logo-img {
+  width: 264px;
+  height: 28px;
+  object-fit: contain;
+}
+
+.site-footer-logo:hover {
+  opacity: 0.8;
+}
+
+.site-footer-logo:active {
+  opacity: 0.6;
+}
+
+.site-footer *:focus {
+  outline: 2px dashed #fff;
+}
+
+
+.site-footer-about-links {
+  display: flex;
+}
+
+.site-footer-about {
+  width: 230px;
+  font-size: 12px;
+  line-height: 19px;
+  margin-right: 200px;
+}
+
+.site-footer-about-links-wrapper {
+  display: flex;
+  flex-grow: 1;
+}
+
+.site-footer-links {
+  width: 50%;
+  list-style: none;
+  font-weight: 500;
+  padding-left: 0;
+  padding-right: 24px;
+  margin: 0;
+}
+
+.site-footer-links-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.site-footer-link {
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+}
+
+.site-footer-link:hover {
+  text-decoration: underline;
+}
+
+.site-footer-divider {
+  height: 1px;
+  background-color: #cecece;
+  border: 0;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.site-footer-socials {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site-footer-socials-heading {
+  font-size: 18px;
+  line-height: 23px;
+  margin: 0;
+  width: 160px;
+  font-weight: 500;
+}
+
+.site-footer-socials-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+}
+
+.site-footer-socials-item:not(:last-child) {
+  margin-right: 25px;
+}
+
+.site-footer-socials-link {
+  display: flex;
+}
+
+.site-footer-socials-icon {
+  flex-shrink: 0;
+  width: 25px;
+  height: 25px;
+  object-fit: contain;
 }
