--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,9 @@ img {
   font-size: 18px;
   font-weight: 500;
   line-height: 21px;
+}
+
+.sitenav:not(:last-child) {
   margin-bottom: 40px;
 }
 
@@ -540,6 +543,7 @@ img {
   width: 393px;
   height: 338px;
 }
+
 .sidebar-img-tall {
   height: 553px;
 }
@@ -665,4 +669,106 @@ img {
   width: 25px;
   height: 25px;
   object-fit: contain;
+}
+
+
+
+/* FORM */
+
+.form-groups-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-group:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.form-groups-wrapper:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.form-groups-wrapper .form-group {
+  width: calc(50% - 5px);
+  margin-bottom: 0;
+}
+
+.form-field {
+  display: block;
+  width: 100%;
+  padding: 18px 20px;
+  border: 1px solid rgba(0, 0, 0, 20%);
+  border-radius: 10px;
+}
+
+.form-field-textarea {
+  min-height: 180px;
+  resize: vertical;
+}
+
+/* CONTACT PAGE */
+
+/* .contact-page {} */
+
+.contact-page-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.contact-page-content {
+  display: flex;
+}
+
+.contact-page-form {
+  width: 696px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.contact-page-form-submit {
+  margin-top: 20px;
+  align-self: flex-end;
+}
+
+
+/* CONTACT PAGE INFO */
+
+.contact-page-info {
+  width: 494px;
+  margin-left: 10px;
+}
+
+.contact-page-definitions-card {}
+
+.definitions-card {
+  margin: 0;
+  padding: 20px 25px;
+  background: #F6F6F6;
+  border-radius: 10px;
+  color: #000;
+}
+
+.definitions-card-item {
+  padding: 20px 0;
+}
+
+.definitions-card-item:not(:last-child) {
+  border-bottom: 1px solid #D2D2D2;
+}
+
+.definitions-card-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 7px;
+}
+
+.definitions-card-value {
+  margin: 0;
+  line-height: 19px
 }
