--- a/css/styles.css
+++ b/css/styles.css
@@ -705,7 +705,7 @@ img {
   display: block;
   width: 100%;
   padding: 18px 20px;
-  border: 1px solid rgba(0, 0, 0, 20%);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 
